pequenas mudanças + sout