@@ -13,6 +13,7 @@ public class FIFO {
 
     public ArrayList<Processo> linhaDeExecucao(){
         int clock = 0;
+        System.out.print("FIFO: ");
         while(!execucao.isEmpty()){
             for (Processo processo : execucao) {
                 if (processo.getTempoChegada() == clock) { // se o processo chega no clock atual, ele vai pro escalonamento
@@ -20,7 +21,7 @@ public class FIFO {
                 }
             }
             if (!comparacao.isEmpty()){
-                Processo processoMaisAntigo = comparacao.getFirst();
+                Processo processoMaisAntigo = comparacao.get(0);
                 for (Processo processo : comparacao) {
                     if (processo == processoMaisAntigo) {
                         processo.decreaseRestante();
@@ -37,6 +38,7 @@ public class FIFO {
             }
            clock++;
         }
+        System.out.println(clock);
         return executados;
     }
 
